--- a/src/templates/partial/app/new.html
+++ b/src/templates/partial/app/new.html
@@ -1,29 +1,38 @@
 <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
+    <div class="modal-content" x-data="{'success': false}">
       <div class="modal-header">
-        <h5 class="modal-title fs-5">New application</h1>
+        <h5 class="modal-title fs-5">{{ 'apps.new' | i18n }}</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
-        <form hx-post="/api/app">
-            <div class="mb-3">
-              <label for="appName" class="form-label">Application name</label>
-              <input type="text" class="form-control" id="appName" name="appName">
-            </div>
-            <div class="mb-3">
-              <label for="appCode" class="form-label">Application code</label>
-              <input type="text" class="form-control" id="appCode" name="appCode" aria-describedby="appCodeHelp">
-              <div id="appCodeHelp" class="form-text">A unique code that identifies the application for you</div>
-            </div>
-            <div class="mb-3">
-              <label for="appDescription" class="form-label">Application description</label>
-              <input type="text" class="form-control" id="appDescription" name="appDescription">
-            </div>
+      <div class="modal-body" hx-ext="response-targets">
+        <div id="newAppFormAlert" x-show="!success"></div>
+        <form id="newAppForm" hx-post="/ui/app" hx-ext="json-enc" hx-target-*="#newAppFormAlert" @htmx:after-request.camel="success = $event.detail.successful;">
+          <div class="mb-3">
+            <label for="appName" class="form-label">{{ 'apps.name' | i18n }}</label>
+            <input type="text" class="form-control" id="appName" name="name">
+          </div>
+          <div class="mb-3">
+            <label for="appCode" class="form-label">{{ 'apps.code' | i18n }}</label>
+            <input type="text" class="form-control" id="appCode" name="code" aria-describedby="appCodeHelp">
+            <div id="appCodeHelp" class="form-text">A unique code that identifies the application for you</div>
+          </div>
+          <div class="mb-3">
+            <label for="appType" class="form-label">{{ 'apps.type.label' | i18n }}</label>
+            <select type="text" class="form-control" id="appType" name="type">
+              {% for type in types %}
+              <option>{{ type }}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <div class="mb-3">
+            <label for="appDescription" class="form-label">{{ 'apps.description' | i18n }}</label>
+            <input type="text" class="form-control" id="appDescription" name="description">
+          </div>
         </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Create application</button>
-      </div>
+        <input type="submit" class="btn btn-primary" form="newAppForm" value="Create application" x-show="!success"/>
+    </div>
     </div>
   </div>
