--- a/src/templates/content/single_application.html
+++ b/src/templates/content/single_application.html
@@ -4,7 +4,7 @@
     <li class="nav-item">
         <a class="nav-link px-3" :class="active === 'about' && 'active'" @click="active = 'about'" href="#" hx-get="/ui/partial/app/{{ app.code }}/about" hx-push-url="/ui/app/{{ app.code }}/about">
           <i class="bi-info-circle"></i>
-          <span class="ms-2">{{ 'apps.about' | i18n }}</span>
+          <span class="ms-2">{{ 'global.about' | i18n }}</span>
         </a>
     </li>
     <li class="nav-item">
