--- a/src/templates/partial/navbar.html
+++ b/src/templates/partial/navbar.html
@@ -3,8 +3,13 @@
     <a class="navbar-brand" href="/ui"><h1>{{ 'global.appname' | i18n }}</h1></a>
     <ul class="nav nav-pills flex-column mb-sm-auto mb-0" id="menu">
         <li class="nav-item fs-5">
-            <a href="/ui" class="nav-link align-middle px-0">
-                <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">{{ 'global.homepage' | i18n }}</span>
+            <a href="/ui/apps" class="nav-link align-middle px-0">
+                <i class="fs-4 bi-app-indicator"></i> <span class="ms-1 d-none d-sm-inline">{{ 'global.applications' | i18n }}</span>
+            </a>
+        </li>
+        <li class="nav-item fs-5">
+            <a href="/ui/components" class="nav-link align-middle px-0">
+                <i class="fs-4 bi-puzzle"></i> <span class="ms-1 d-none d-sm-inline">{{ 'global.components' | i18n }}</span>
             </a>
         </li>
     </ul>
