fix: use global.owner instead of apps.owner

--- a/src/templates/partial/app/about.html
+++ b/src/templates/partial/app/about.html
@@ -4,7 +4,7 @@
       <h5 class="card-title">{{ 'global.metadata' | i18n }}</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       <dl class="row col-6">
-        <dt class="col-6">{{ 'apps.owner' | i18n }}</dt>
+        <dt class="col-6">{{ 'global.owner' | i18n }}</dt>
         <dd class="col-6">TODO : Someone</dd>
       </dl>
     </div>
