--- a/src/templates/content/single_application.html
+++ b/src/templates/content/single_application.html
@@ -2,7 +2,7 @@
   <h2>{{ app.name }} - {{ app.code }}</h2>
   <ul class="nav nav-tabs fs-5 px-1" x-data="{active: '{{ active }}'}" hx-target="#apps-content" hx-trigger="click" >
     <li class="nav-item">
-        <a class="nav-link px-3" :class="active === 'about' && 'active'" @click="active = 'about'" href="#" hx-get="/ui/partial/app/{{ app.code }}/about" hx-push-url="/ui/app/{{ app.code }}/about">
+        <a class="nav-link px-3" :class="active === 'about' && 'active'" @click="active = 'about'" href="#" hx-get="/ui/partial/app/{{ app.id }}/about" hx-push-url="/ui/app/{{ app.id }}/about">
           <i class="bi-info-circle"></i>
           <span class="ms-2">{{ 'global.about' | i18n }}</span>
         </a>
@@ -21,4 +21,4 @@
     </li>
   </ul>
 </div>
-<div id="apps-content" hx-get="/ui/partial/app/{{ app.code }}/{{ active }}" hx-trigger="load"></div>
+<div id="apps-content" hx-get="/ui/partial/app/{{ app.id }}/{{ active }}" hx-trigger="load"></div>
