--- a/src/templates/pages/single_application.html
+++ b/src/templates/pages/single_application.html
@@ -1,4 +1,4 @@
 {% extends "pages/base.html" %}
 {% block content %}
-<div hx-get="/ui/content/app/{{ app.code }}/{{ active}}" hx-swap="outerHTML" hx-trigger="load"></div>
+<div hx-get="/ui/content/app/{{ app.id }}/{{ active}}" hx-swap="outerHTML" hx-trigger="load"></div>
 {% endblock %}
