--- a/src/templates/partial/component/about.html
+++ b/src/templates/partial/component/about.html
@@ -6,7 +6,7 @@
       <dl class="row col-6">
         <dt class="col-6">{{ 'global.application' | i18n }}</dt>
         <dd class="col-6">
-          <a href="/ui/app/{{ component.application.code }}">
+          <a href="/ui/app/{{ component.application.id }}">
             {{ component.application.name }} - {{ component.application.code }}
           </a>
         </dd>
