feat: add domain table and display applicaiton domain

--- a/src/templates/content/applications.html
+++ b/src/templates/content/applications.html
@@ -12,6 +12,7 @@
         <tr>
             <th>Code</th>
             <th>Name</th>
+            <th>Domain</th>
             <th>Tags</th>
         </tr>
     </thead>
@@ -20,6 +21,7 @@
         <tr hx-get="/ui/content/app/{{ app.id }}" hx-push-url="/ui/app/{{ app.id }}" hx-target="#content-wrapper" role="link">
             <td>{{ app.code }}</td>
             <td>{{ app.name }}</td>
+            <td>{{ app.domain.name if app.domain else "N/A" }}</td>
             <td>{{ ', '.join(app.tags) }}</td>
         </tr>
         {% else %}
