feat: add spacing and icon to navbar-brand

--- a/src/templates/partial/navbar.html
+++ b/src/templates/partial/navbar.html
@@ -1,6 +1,6 @@
 <div class="col-auto col-md-3 col-xl-2 px-0">
-  <div class="d-flex flex-column align-items-sm-start px-3 pt-2 text-white min-vh-100 bg-dark">
-    <a class="navbar-brand" href="/ui"><h1>{{ 'global.appname' | i18n }}</h1></a>
+  <div class="d-flex flex-column align-items-sm-start px-4 pt-4 text-white min-vh-100 bg-dark">
+    <a class="navbar-brand" href="/ui"><h1 class="bi-book"><span class="ms-2">{{ 'global.appname' | i18n }}</span></h1></a>
     <ul class="nav nav-pills flex-column mb-sm-auto mb-0" id="menu">
         <li class="nav-item fs-5">
             <a href="/ui/apps" class="nav-link align-middle px-0">
