--- a/src/templates/content/components.html
+++ b/src/templates/content/components.html
@@ -1,5 +1,5 @@
 <div class="row d-flex px-2 pt-3 mb-3 bg-body-tertiary" id="content-header">
-  <h2>{{ 'global.components' | i18n }}</h2>
+  <h2 class="bi-puzzle"><span class="ms-2">{{ 'global.components' | i18n }}</span></h2>
 </div>
 <div id="content-actions" class="d-flex justify-content-end">
     <button class="btn btn-primary" hx-get="/ui/partial/components/new" hx-target="#newComponentModal" data-bs-toggle="modal" data-bs-target="#newComponentModal" hx-trigger="click">
