--- a/src/templates/partial/app/new.html
+++ b/src/templates/partial/app/new.html
@@ -1,7 +1,7 @@
 <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content" x-data="{'success': false}">
       <div class="modal-header">
-        <h5 class="modal-title fs-5">{{ 'apps.new' | i18n }}</h1>
+        <h5 class="modal-title fs-5">{{ 'apps.action.new' | i18n }}</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body" hx-ext="response-targets">
@@ -23,7 +23,7 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ 'global.action.close' | i18n }}</button>
         <input type="submit" class="btn btn-primary" form="newAppForm" value="Create application" x-show="!success"/>
     </div>
     </div>
