--- a/src/templates/partial/component/about.html
+++ b/src/templates/partial/component/about.html
@@ -13,7 +13,7 @@
         <dt class="col-6">{{ 'global.owner' | i18n }}</dt>
         <dd class="col-6">TODO : Someone</dd>
         <dt class="col-6">{{ 'apps.technology.label' | i18n }}</dt>
-        <dd class="col-6">TODO some tech stack</dd>
+        <dd class="col-6">{{ component.tech_stack.name if component.tech_stack else "N/A"}}</dd>
       </dl>
     </div>
     <div class="card-footer">
