fix(component/new): fix tech stack select name

--- a/src/templates/partial/component/new.html
+++ b/src/templates/partial/component/new.html
@@ -40,7 +40,7 @@
           </div>
           <div class="mb-3">
             <label for="componentApplication" class="form-label">{{ 'components.techstack' | i18n }}</label>
-            <select class="form-select" id="componentType" name="type">
+            <select class="form-select" id="componentType" name="techstack_id">
               {% for stack in techstacks %}
               <option value="{{ stack.id }}">{{ stack.name }}</option>
               {% endfor %}
